--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "filament/filament": "3.0.53",
+        "filament/filament": "3.0.98",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "psr/simple-cache": "2.0",
+        "pxlrbt/filament-excel": "^2.1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
