--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "althinect/filament-spatie-roles-permissions": "^2.2",
         "filament/filament": "3.0.98",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "2.0",
-        "pxlrbt/filament-excel": "^2.1.8"
+        "pxlrbt/filament-excel": "^2.1.8",
+        "spatie/laravel-permission": "^6.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
