--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "2.0",
         "pxlrbt/filament-excel": "^2.1.8",
-        "spatie/laravel-permission": "^6.1"
+        "spatie/laravel-permission": "^6.1",
+        "spatie/laravel-settings": "^3.4",
+        "tomatophp/filament-pwa": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
