--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "hammerstone/fast-paginate": "^1.1",
         "laravel/framework": "^10.10",
+        "laravel/octane": "^2.6",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
