--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss-nesting": "^13.0.1",
         "tailwindcss": "^3.4.16",
         "vite": "^4.5.5"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.4",
+        "leaflet-control-geocoder": "^3.3.0"
     }
 }
